--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,7 +16,7 @@ main h2 {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300, 1fr));
   place-content: center;
-  gap: clamp(40px, 3.75rem, 80px);
+  gap: 3.75rem;
   width: 100%;
 }
 
@@ -61,7 +61,7 @@ main h2 {
 .project-info-container {
   min-height: 240px;
   gap: 0.75rem;
-  padding: clamp(16px, 1rem, 32px);
+  padding: 1rem;
 }
 
 .name-links-container {
@@ -90,7 +90,7 @@ main h2 {
 
   min-width: var(--min-width);
   min-height: var(--min-height);
-  
+
   text-decoration: none;
   color: inherit;
 }
@@ -111,6 +111,8 @@ main h2 {
       auto-fit,
       minmax(clamp(300px, 15rem, 440px), 1fr)
     );
+
+    gap: min(120px, 3.75rem);
   }
 }
 
